Fixed alignment issues

--- a/docs/styles/project_page.css
+++ b/docs/styles/project_page.css
@@ -49,6 +49,7 @@ nav a {
     width: 100%;
     height: 100%;
     display: flex;
+    justify-content: right;
 }
 
 nav ul {
@@ -95,6 +96,7 @@ article {
     min-width: 600px;
     width: 100%;
     overflow-wrap: anywhere;
+    flex-shrink: 0.2;
 }
 
 article img {
@@ -143,14 +145,14 @@ pre {
 }
 
 #right_pad {
-    max-width: 200px;
+    max-width: 50%;
     min-width: 50px;
     width: 100%;
 
 }
 
 #left_pad {
-    max-width: 200px;
+    max-width: 50%;
     min-width: 50px;
     width: 100%;
 }
